tests/negative/gold/logical_test.gold
tests/negative/logical_test.toit:6:14: error: '||' has been deprecated for 'or'
  print true || false
             ^~
tests/negative/logical_test.toit:7:14: error: '&&' has been deprecated for 'and'
  print true && false
             ^~
tests/negative/logical_test.toit:8:10: error: '!' has been deprecated for 'not'
  print (!true)
         ^
tests/negative/logical_test.toit:9:9: error: '!' has been deprecated for 'not'
  print !true
        ^
tests/negative/logical_test.toit:9:9: error: 'not' must be parenthesized when used at this location
  print !true
        ^
tests/negative/logical_test.toit:10:6: error: '!' has been deprecated for 'not'
  if !true: print "ok"
     ^
tests/negative/logical_test.toit:6:3: error: Logical operation argument can't be 'none'
  print true || false
  ^~~~~
tests/negative/logical_test.toit:7:3: error: Logical operation argument can't be 'none'
  print true && false
  ^~~~~
Compilation failed.
